# KimberlieMoji

./: .gitignore
backend/: README.md  pyproject.toml
frontend/: app.json  package-lock.json  package.json
frontend/app/: _layout.tsx  tailwind-test.tsx  test.tsx
frontend/app/(tabs)/: index.tsx
