[project]
name = "kimberliemoji"
version = "0.1.0"
description = "A mobile application that allows users to create japanese emojis or kaomojis for others' and their own use, and make virtual conversations livelier."
authors = [
    {name = "Vulprit Prooze",email = "raileyalin@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard] (>=0.121.0,<0.122.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"